--- a/reviews.html
+++ b/reviews.html
@@ -58,14 +58,14 @@
             <div class="container">
                 <div class="main-reviews__feedbacks">
                     <div class="main-reviews__feedback">
-                        <div class="feedback__header">
-                            <img src="./img/reviews__page/1.png" alt="1" class="header__img">
-                            <div class="header__person-info">
-                                <a href="#" class="person-info__name-link">
-                                    <div class="person-info__name">Иван Петрович</div>
-                                    <img src="./icons/reviews__page/vk.png" alt="vk" class="person-info__social">
+                        <div class="feedback__person">
+                            <img src="./img/reviews__page/1.png" alt="1" class="person__img">
+                            <div class="person__info">
+                                <a href="#" class="person__name-link">
+                                    <div class="person__name">Иван Петрович</div>
+                                    <img src="./icons/reviews__page/vk.png" alt="vk" class="person__social">
                                 </a>
-                                <div class="person-info__service">Съемка клипа</div>
+                                <div class="person__service">Съемка клипа</div>
                             </div>
                         </div>
                         <h3 class="feedback__title">Съемка клипа</h3>
@@ -75,15 +75,15 @@
                             использовали небезизвестный универсальный код речей. </p>
                         <time class="feedback__time">Ноябрь 2019</time>
                     </div>
-                    <div class="main-reviews__feedback">
-                        <div class="feedback__header">
-                            <img src="./img/reviews__page/3.png" alt="3" class="header__img">
-                            <div class="header__person-info">
-                                <a href="#" class="person-info__name-link">
-                                    <div class="person-info__name">Лиза Сидорова</div>
-                                    <img src="./icons/reviews__page/vk.png" alt="vk" class="person-info__social">
+                    <div class="main-reviews__feedback feedback">
+                        <div class="feedback__person person">
+                            <img src="./img/reviews__page/3.png" alt="3" class="person__img">
+                            <div class="person__info">
+                                <a href="#" class="person__name-link">
+                                    <div class="person__name">Лиза Сидорова</div>
+                                    <img src="./icons/reviews__page/vk.png" alt="vk" class="person__social">
                                 </a>
-                                <div class="person-info__service">Съемка свадьбы</div>
+                                <div class="person__service">Съемка свадьбы</div>
                             </div>
                         </div>
                         <h3 class="feedback__title">Свадебная съемка.</h3>
@@ -94,14 +94,14 @@
                         <time class="feedback__time">Ноябрь 2019</time>
                     </div>
                     <div class="main-reviews__feedback">
-                        <div class="feedback__header">
-                            <img src="./img/reviews__page/2.png" alt="2" class="header__img">
-                            <div class="header__person-info">
-                                <a href="#" class="person-info__name-link">
-                                    <div class="person-info__name">Екатерина Жмых</div>
-                                    <img src="./icons/reviews__page/vk.png" alt="vk" class="person-info__social">
+                        <div class="feedback__person">
+                            <img src="./img/reviews__page/2.png" alt="2" class="person__img">
+                            <div class="person__info">
+                                <a href="#" class="person__name-link">
+                                    <div class="person__name">Екатерина Жмых</div>
+                                    <img src="./icons/reviews__page/vk.png" alt="vk" class="person__social">
                                 </a>
-                                <div class="person-info__service">Студийная съемка</div>
+                                <div class="person__service">Студийная съемка</div>
                             </div>
                         </div>
                         <h3 class="feedback__title">Очень понравилась работа в студии.</h3>
@@ -114,14 +114,14 @@
                         <time class="feedback__time">Ноябрь 2019</time>
                     </div>
                     <div class="main-reviews__feedback">
-                        <div class="feedback__header">
-                            <img src="./img/reviews__page/4.png" alt="4" class="header__img">
-                            <div class="header__person-info">
-                                <a href="#" class="person-info__name-link">
-                                    <div class="person-info__name">Антон Игоревич</div>
-                                    <img src="./icons/reviews__page/vk.png" alt="vk" class="person-info__social">
+                        <div class="feedback__person">
+                            <img src="./img/reviews__page/4.png" alt="4" class="person__img">
+                            <div class="person__info">
+                                <a href="#" class="person__name-link">
+                                    <div class="person__name">Антон Игоревич</div>
+                                    <img src="./icons/reviews__page/vk.png" alt="vk" class="person__social">
                                 </a>
-                                <div class="person-info__service">Реклама</div>
+                                <div class="person__service">Реклама</div>
                             </div>
                         </div>
                         <h3 class="feedback__title">Заказывал съемку рекламы. И не пожалел!</h3>
