Внес правки у paginator
добавил доп класс дисплею

--- a/reviews.html
+++ b/reviews.html
@@ -133,7 +133,7 @@
                     </div>
                 </div>
                 <div class="paginator">
-                    <div class="paginator__display paginator__item--black">Страница 1 из 7</div>
+                    <div class="paginator__display paginator__display--black">Страница 1 из 7</div>
                     <ul class="paginator__list">
                         <li class="paginator__item paginator__item--black paginator__item--active">1</li>
                         <li class="paginator__item paginator__item--black">2</li>
