Add path images at section news_and_promo
Не было картинок в секции Новости и акции - Добавил пути

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <h2 class="nap__title">Новости и акции</h2>
                         <div class="nap__promo-blocks">
                             <div class="nap__promo camera">
-                                <img src="#" alt="" class="nap__img">
+                                <img src="./img/nap/camera.jpg" alt="camera" class="nap__img">
                                 <time class="nap__date">Декабрь 2019</time>
                                 <h3 class="nap__promo-title">Снимем ваш клип на 50% дешевле</h3>
                                 <p class="nap__info">В честь Новогодних праздников мы раздаем огромные скидки,
@@ -110,7 +110,7 @@
 
                             </div>
                             <div class="nap__promo wedding">
-                                <img src="#" alt="" class="nap__img">
+                                <img src="./img/nap/wedding.jpg" alt="wedding" class="nap__img">
                                 <time class="nap__date">Декабрь 2019</time>
                                 <h3 class="nap__promo-title">Акция для молодоженов 30%</h3>
                                 <p class="nap__info">Успевайте забронировать даты. Пока еще есть места на декабрь.
